Interaktiv TCP-klient enligt offertens krav
Systemarkitektur (enligt offerten):
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
Server (C):
✅ Hanterar flera samtidiga klienter via TCP
✅ Levererar väderdata i JSON-format
✅ Använder caching för snabbare svar (30 min TTL)
✅ Modulär design för framtida utbyggnad
✅ Grundläggande felhantering

Klienter (C++):
✅ Kommunicerar med servern via TCP (localhost:8080)
✅ Visar väderdata i terminalen
✅ Använder lokal cache (via servern)
✅ Interaktivt läge - skriv bara stad-namnet

Ändringar:
- Uppdaterad weather_client.cpp till interaktivt läge
- Klienten pratar med servern via TCP (INTE direkt med OpenWeatherMap)
- Servern hämtar från OpenWeatherMap API och cachar resultatet
- Borttagen standalone-klient (var inte enligt offerten)
- Uppdaterad client/Makefile med tydliga instruktioner

Användning:
1. Terminal 1: cd vädersystem && make run (startar server)
2. Terminal 2: cd vädersystem/client && make run (startar klient)
3. Skriv stad-namn: "Luleå", "Stockholm", "London GB"

Uppfyller offertens krav:
✅ Server kommunicerar med OpenWeatherMap API
✅ Klient kommunicerar med server via TCP
✅ JSON-format för dataöverföring
✅ Caching för snabbare svar
✅ Modulär och dokumenterad kod

--- a/vädersystem/client/Makefile
+++ b/vädersystem/client/Makefile
@@ -28,8 +28,8 @@ else
 endif
 
 # Källfiler
-CLIENT_CPP_SRC = weather_client_standalone.cpp
-CLIENT_CPP_OBJ = weather_client_standalone.o
+CLIENT_CPP_SRC = weather_client.cpp
+CLIENT_CPP_OBJ = weather_client.o
 
 # ============================================================================
 # PHONY TARGETS
@@ -48,6 +48,9 @@ client: $(CLIENT_CPP)
 	@echo ""
 	@echo "✅ C++-klient byggd: $(CLIENT_CPP)"
 	@echo ""
+	@echo "💡 Kräver att servern körs på localhost:8080"
+	@echo "💡 Starta server: cd .. && make run"
+	@echo ""
 	@echo "Kör 'make run' för interaktiv meny"
 	@echo "Kör './$(CLIENT_CPP) Stockholm SE' för direkt användning"
 	@echo ""
@@ -62,7 +65,7 @@ $(CLIENT_CPP): $(CLIENT_CPP_OBJ)
 	@$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
 
 # Kompilera C++-fil
-weather_client_standalone.o: weather_client_standalone.cpp
+weather_client.o: weather_client.cpp
 	@echo "Kompilerar $<..."
 	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
@@ -74,13 +77,18 @@ weather_client_standalone.o: weather_client_standalone.cpp
 run: client
 	@echo ""
 	@echo "╔═══════════════════════════════════════════════════════╗"
-	@echo "║          STARTAR STANDALONE VÄDERKLIENT              ║"
+	@echo "║          STARTAR INTERAKTIV VÄDERKLIENT              ║"
 	@echo "╚═══════════════════════════════════════════════════════╝"
 	@echo ""
-	@echo "💡 Hämtar data DIREKT från OpenWeatherMap API"
-	@echo "💡 Ingen server krävs - helt fristående klient!"
+	@echo "💡 Ansluter till server på localhost:8080"
+	@echo "💡 Servern hämtar data från OpenWeatherMap API"
+	@echo "💡 Skriv stad-namnet för att få vädret!"
+	@echo "💡 Exempel: 'Luleå' eller 'London GB'"
 	@echo ""
-	@./$(CLIENT_CPP) Stockholm SE
+	@echo "⚠️  OBS: Kontrollera att servern körs först!"
+	@echo "   Starta server: cd .. && make run"
+	@echo ""
+	@./$(CLIENT_CPP)
 
 # Testa klient med Stockholm
 test: client
