Förbättra vädersystem med validering och automatisk porthantering
Ändringar:
- Lägger till 'land' fält i server JSON-svar (weather och forecast)
- Implementerar validering av väderdata i C++ klienten med arGiltig() metod
- Lägger till interaktivt läge i C++ klienten för kontinuerliga förfrågningar
- Automatisk porthantering i Makefile (taskkill/pkill innan serverstart)
- Förbättrad loggning för klientanslutningar i servern
- Felhantering för ogiltiga stadnamn med användarvänliga meddelanden

Tekniska förbättringar:
- Strukturvalidering mellan vaderprotokoll.h och JSON-utdata
- Stöd för både kommandorads- och interaktivt läge i klienten
- Automatisk rensning av port 8080 innan serverstart
- Tydliga felmeddelanden på svenska

Utvecklad av Mohammed

--- a/vädersystem/client/Makefile
+++ b/vädersystem/client/Makefile
@@ -29,7 +29,7 @@ endif
 
 # Källfiler
 CLIENT_CPP_SRC = weather_client.cpp
-CLIENT_CPP_OBJ = weather_client.o
+CLIENT_CPP_OBJ = weather_client_cpp.o
 
 # ============================================================================
 # PHONY TARGETS
@@ -65,7 +65,7 @@ $(CLIENT_CPP): $(CLIENT_CPP_OBJ)
 	@$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
 
 # Kompilera C++-fil
-weather_client.o: weather_client.cpp
+weather_client_cpp.o: weather_client.cpp
 	@echo "Kompilerar $<..."
 	@$(CXX) $(CXXFLAGS) -c $< -o $@
 
